tests/more_classes/more_classes.exp
Error ------------------------------------------------------------- Bar.js:15:19

Cannot assign `"?"` to `new Qux().w` because string is incompatible with number.

Error: Bar.js:15
 15:     new Qux().w = "?";
                       ^^^ Cannot assign `"?"` to `new Qux().w` because string [1] is incompatible with number [2].
  References:
   15:     new Qux().w = "?";
                         ^^^ [1]: string
    5:   w:number;
           ^^^^^^ [2]: number. See: Qux.js:5

Error ------------------------------------------------------------- Foo.js:21:12

Cannot extend `Qux` with `Foo` because in property `fooqux` and then the first
argument, string is incompatible with number.

Error: Foo.js:21
 21:   fooqux(x:string) {
                ^^^^^^ Cannot extend `Qux` [1] with `Foo` because in property `fooqux` and then the first argument, string [2] is incompatible with number [3].
  References:
    7: class Foo extends Qux {
                         ^^^ [1]: `Qux`
   21:   fooqux(x:string) {
                  ^^^^^^ [2]: string
    9:   fooqux(x:number) { }
                  ^^^^^^ [3]: number. See: Qux.js:9

Error ------------------------------------------------------------- Foo.js:10:10

Cannot assign `x` to `this.x` because property `x` is missing in uninitialized
this (expected super constructor call).

Error: Foo.js:10
 10:     this.x = x;
              ^ Cannot assign `x` to `this.x` because property `x` is missing in uninitialized this (expected super constructor call) [1].
  References:
    7: class Foo extends Qux {
             ^^^ [1]: uninitialized this (expected super constructor call)

Error ------------------------------------------------------------- Foo.js:13:16

Missing type annotation for `z`.

Error: Foo.js:13
 13:   foo(y:string,z):number {
                    ^ Missing type annotation for `z`.

Error ------------------------------------------------------------- Foo.js:16:21

Cannot call `Bar` with `y` bound to `y` because string is incompatible with
number.

Error: Foo.js:16
 16:     var v = new Bar(y);
                         ^ Cannot call `Bar` with `y` bound to `y` because string [1] is incompatible with number [2].
  References:
   13:   foo(y:string,z):number {
               ^^^^^^ [1]: string
    9:   constructor(y:number) {
                       ^^^^^^ [2]: number. See: Bar.js:9

Error ------------------------------------------------------------- Foo.js:18:12

Cannot return `v.bar(...)` because string is incompatible with number.

Error: Foo.js:18
 18:     return v.bar(z,u);
                ^^^^^^^^^^ Cannot return `v.bar(...)` because string [1] is incompatible with number [2].
  References:
   14:   bar(z:string,u:string):string {
                                ^^^^^^ [1]: string. See: Bar.js:14
   13:   foo(y:string,z):number {
                         ^^^^^^ [2]: number

Error ------------------------------------------------------------- Foo.js:18:20

Cannot call `v.bar` with `u` bound to `u` because number is incompatible with
string.

Error: Foo.js:18
 18:     return v.bar(z,u);
                        ^ Cannot call `v.bar` with `u` bound to `u` because number [1] is incompatible with string [2].
  References:
    5:   w:number;
           ^^^^^^ [1]: number. See: Qux.js:5
   14:   bar(z:string,u:string):string {
                        ^^^^^^ [2]: string. See: Bar.js:14


Found 7 errors
